[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openscreener"
version = "0.1.0"
description = "A Playwright-powered Python package for extracting structured financial data from Screener.in."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Navaneeth" }
]
keywords = [
  "finance",
  "playwright",
  "screener",
  "screener.in",
  "stocks",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "playwright>=1.43",
  "rich>=13.7",
]

[project.urls]
Homepage = "https://github.com/Na1neeth/openscreener"
Repository = "https://github.com/Na1neeth/openscreener"
Issues = "https://github.com/Na1neeth/openscreener/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "twine>=6.0",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.venv",
  "/test",
  "/tests",
  "/promt.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openscreener"]

[tool.pytest.ini_options]
testpaths = ["tests"]
